css/styles.css
/* ... */
.user-info p {
  color: #fff;
  padding-right: 12px;
  margin-top: 10px;
}

.link-item-1 {
  display: flex;
}

.input-fields,
.input-fields2 {
  padding-top: 23px;
  display: flex;
}

.button {
  background-color: #383838;
  padding: 12px;
  width: 120px;
  border-radius: 3px;
  margin-left: 12px;
  color: #888;
}

.search-input,
.location {
  padding: 12px;
  width: 300px;
}

.results-options2 {
  width: 150px;
}

.button2 {
  background-color: #383838;
  padding: 12px;
  width: 150px;
  border-radius: 3px;
  margin-left: 12px;
  color: #888;
}

/* =====> media queries <====== */

@media (max-width: 768px) {
 

  .nav-bar {
    background: linear-gradient(to right, #000, #434343);
    display: flex;
    padding: 5px;
    box-shadow: 0 9px 12px 0 #ff0084, 0 9px 20px 0 red;
    width: 100%;
    height: 60px;
  }

  .items2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  /*
  .link-items {
    display: flex;
    padding: 8px;
  } */

  .link-items li {
    margin: 5px auto;
    position: relative;
    right: 23px;
  }

  .right {
    justify-content: space-around;
    margin-right: 12px;
  }

  .user-info,
  .right {
    display: flex;
    align-items: center;
  }

  .list-1 {
    margin: auto;
  }

  .user-info,
  .input-fields,
  .input-fields2 {
    justify-content: center;
  }

  .list-1 img,
  .list img {
    position: relative;
    top: 13px;
  }

  .list img {
    width: 8px;
  }

  .display-4 {
    font-size: 20px;
    font-weight: 500;
  }

  .input-fields,
  .input-fields2 {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
  }

  .product {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 12px;
  }

  .main-footer {
    display: flex;
    margin-top: 56px;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }

  .categories {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }

  .copyright {
    border-top: 1px #ccc solid;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .sales-info {
    width: 100%;
    font-size: 15px;
  }

  .d-flex {
    display: flex;
    flex-direction: column;
  }

  .button-post {
    width: 50px;
    height: 18px;
    font-size: 6px;
    margin-left: 7px;
  }

  .list,
  .list-1 {
    font-size: 10px;
  }

  .texts,
  .category1,
  .category2,
  .copyright-item {
    font-size: 14px;
  }

  .aco {
    margin-right: 32px;
  }

  .aco2 {
    font-size: 13px;
  }

  .shops-items {
    padding-top: 12px;
    border-top: 3px #ccc solid;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  .items {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  .d-flex,
  .d-flex .Ex,
  .view-all {
    width: 100%;
    font-size: 12px;
  }

  /* .carts img {
    width: 100px;
    height: 100px;
  } */

  .details .lead {
    font-size: 12px;
    width: 100%;
    font-weight: 500;
  }

  .bottom-item {
    margin-bottom: 15px;
  }

  .display-5 {
    font-size: 18px;
  }

  .learn {
    font-size: 12px;
  }

  .logo img,
  .list-1 img,
  .avatar img,
  .evelop {
    width: 10px;
  }

  .cover-music {
    margin-left: 12px;
  }

  .cover-music h2 {
    font-size: 12px;
  }

  .user-info p {
    font-size: 10px;
    font-weight: 400;
  }

  .counter {
    width: 10px;
    height: 10px;
    font-size: 8px;
  }

  .buy-sell,
  .buy-sell2 {
    font-size: 17px;
    margin-top: 5px;
  }

  .input-fields,
  .results-options,
  .results-options2,
  .input-fields2 {
    width: 300px;
    margin: auto;
  }

  .input-fields input,
  .input-fields2 input {
    margin-top: 3px;
  }

  .buy-sell2 {
    color: #fff;
    text-align: center;
    margin: auto;
  }

  .button,
  .button2 {
    background-color: #383838;
    width: 300px;
    border-radius: 3px;
    color: #888;
    margin: 0 auto;
    padding: 4px;
  }

  .h2,
  .h3 {
    box-shadow: 0 9px 12px 0 #ff0084, 0 9px 20px 0 red;
    border: 1px #ccc solid;
    width: 200px;
    height: 50px;
    margin: auto;
    border-radius: 10px;
    padding-top: 12px;
  }

  .more-contents2 {
    padding: 10px;
  }
}

@media (min-width: 768px) {
  .nav-bar {
    background: linear-gradient(to right, #000, #434343);
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 10px;
    box-shadow: 0 9px 12px 0 #c26d99, 0 9px 20px 0 red;
  }

  .display-4 {
    font-size: 16px;
  }

  .link-items .list {
    font-size: 8px;
  }

  .more-contents2 {
    background-color: #d35266;
    height: auto;
    padding-top: 70px;
    padding-bottom: 30px;
    font-family: 'gotham rounded light', sans-serif;
    color: #fff;
  }

  .cover-music {
    height: 50px;
    width: 150px;
    border: 1px white solid;
    padding-left: 25px;
    padding-top: 12px;
    box-shadow: 0 9px 12px 0 #ff0084, 0 9px 20px 0 red;
  }

  .items {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    grid-gap: 1.2em;
  }

  .details .bottom-item {
    padding-bottom: 30px;
  }

  .btn-grp {
    display: flex;
  }

  .purchase-btn,
  .purchase-btn2 {
    font-size: 15px;
    margin-left: 4px;
  }

  .purchase-btn2 {
    margin-bottom: 2px;
  }

  /* .product img, .sales-info, .info{

    height: auto;

} */

 

  .cover {
    padding: 50px;
  }

  .aco {
    margin-right: 32px;
  }

  .aco2 {
    font-size: 13px;
  }

  /* .button-post {
    padding: 2px;
    border: none;
    border-radius: 4px;
    background-color: #ea384d;
    box-shadow: 0 2px 3px 0 #ff0084, 0 9px 20px 0 #33001b;
    text-align: center;
    text-transform: uppercase;
    color: #ffffff;
    font-size: 10px;
  } */
  .list img {
    width: 10px;
  }
}
/* ... */

